force-app/main/default/objects/CostCenterSegment__c/CostCenterSegment__c.object-meta.xml
<CustomObject>
    <label>Cost Center Segment</label>
    <nameField>
        <label>Cost Center Segment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cost Center Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>