force-app/main/default/objects/CostCenterSegment__c/fields/CostCenter__c.field-meta.xml
<CustomField>
    <fullName>CostCenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Center</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CostCenter__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CostCenter__c</referenceTo>
    <relationshipLabel>Cost Center Segments</relationshipLabel>
    <relationshipName>CostCenterSegments</relationshipName>
    <type>Lookup</type>
</CustomField>