force-app/main/default/objects/CostCenterSegment__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Segment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Segment__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Segment__c</referenceTo>
    <relationshipLabel>Cost Center Segments</relationshipLabel>
    <relationshipName>CostCenterSegments</relationshipName>
    <type>Lookup</type>
</CustomField>