force-app/main/default/objects/CostCenterSegment__c/fields/SegmentType__c.field-meta.xml
<CustomField>
    <fullName>SegmentType__c</fullName>
    <formula>Segment__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment Type</label>
    <type>Text</type>
</CustomField>